remove navigation padding to fix issue on mobile side view

--- a/src/index.css
+++ b/src/index.css
@@ -3947,7 +3947,6 @@ figcaption {
 
   .navigation {
     height: 10vh;
-    padding: 1em;
   }
 
   .navigation-item {
